# evo-sim

./: .gitignore  Cargo.toml  README.md
.github/workflows/: release.yml
app/: Cargo.toml
app/src/: lib.rs
app/www/: index.html
libs/genetic-algorithm/src/: lib.rs
libs/neural-netwok/: Cargo.toml
libs/neural-netwok/src/: lib.rs
libs/simulation/: Cargo.toml
libs/simulation/src/: lib.rs
